test/invalid/syntactic/bare_def_keyword.sysml
// INVALID: bare 'def' keyword without definition type
// EXPECTED: Parse error
def Foo { }
